--- a/README
+++ b/README
@@ -1,8 +1,6 @@
 Clone of Paranoid (game) in intel 8086 assembly 
+Computer Organization and Assembly Language Group Project 
 
-Authors
-========
+Created By: Furqan Tariq, Hasnain Shaukat
 
-	Furqan Tariq
-	Hasnain Shaukat
-	
+
